--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
