--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://benthepoet.github.io/reddit-react-redux",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "he": "^1.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -12,6 +14,8 @@
     "redux-saga": "^1.0.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
